<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Snakes</string>
    <string name="app_name_menu">Game</string>
    <string name="preferred_music_volume">2.2</string>

    <string name="button_label_start_new_game">Start New Game</string>
    <string name="button_label_settings">Settings</string>
    <string name="button_label_about">About</string>
    <string name="button_label_exit">Exit</string>
    <string name="button_label_back">Back</string>

    <string name="activity_label_settings">Settings</string>
    <string name="activity_label_about">About</string>
</resources>
